# example.py

./: .black.toml  .gitignore  README.md  pyproject.toml  pyrightconfig.json
src/design_patterns/behavioral/: strategy.py
src/design_patterns/creational/: factory.py  factory_method.py  singleton.py
src/design_patterns/structural/: adapter.py
src/examples/creational/: logger.py
src/examples/flask/: app.py  logger.py  user.py  user_factory.py
src/examples/flask/adapters/: weather_adapter.py  weather_api_client_adapter.py
src/examples/flask/services/: discount_service.py  weather_service.py
src/examples/flask/strategies/discount/: discount_strategy.py  no_discount_strategy.py
tests/design_patterns/: test_singleton.py
tests/design_patterns/behavioral/: test_strategy.py
tests/design_patterns/creational/: test_factory.py  test_factory_method.py  test_singleton.py
tests/design_patterns/structural/: test_adapter.py
tests/examples/creational/: test_logger.py
tests/examples/flask/: test_logger.py  test_user.py  test_user_factory.py
tests/examples/flask/adapters/: test_weather_api_client_adapter.py
tests/examples/flask/strategy/discount/: test_no_discount_strategy.py
