[tool.poetry]
name = "examples-py"
version = "0.1.0"
description = "Python examples"
authors = ["Glauber Brennon <glauberbrennon@gmail.com>"]
readme = "README.md"
packages = [{include = "examples", from="src"}]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
